fix(Input): better dark mode!!!

--- a/assets/css/components/input.css
+++ b/assets/css/components/input.css
@@ -1,6 +1,6 @@
 .mbta-input {
   appearance: none;
-  background-color: var(--colors-white);
+  background-color: var(--colors-background-primary);
   border-color: var(--colors-action-primary-default);
   border-radius: var(--border-radius-default);
   border-width: var(--border-width-default);
@@ -49,6 +49,11 @@ input[type="radio"].mbta-input:checked {
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
+
+  .mbta-metro-dark-mode & {
+    /* adjust fill color manually, can't use variables in url() */
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='black' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
+  }
 }
 
 input[type="checkbox"].mbta-input:checked {
@@ -57,6 +62,11 @@ input[type="checkbox"].mbta-input:checked {
   background-size: 100% 100%;
   background-position: center;
   background-repeat: no-repeat;
+
+  .mbta-metro-dark-mode & {
+    /* adjust fill color manually, can't use variables in url() */
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='black' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
+  }
 }
 
 input[type="checkbox"].mbta-input,
